[gd_scene load_steps=11 format=2]

[ext_resource path="res://menus/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Schluber.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://menus/button.gd" type="Script" id=3]
[ext_resource path="res://fonts/8-BIT WONDER.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://sounds/sfx/button_click.wav" type="AudioStream" id=5]

[sub_resource type="Shader" id=4]

code = "shader_type canvas_item;

void fragment()
{
	vec4 color = texture(TEXTURE, UV);
	if (color.a > 0.0)
	{
		color.a = abs(sin(TIME));
	}
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=5]

render_priority = 0
shader = SubResource( 4 )
_sections_unfolded = [ "shader" ]

[sub_resource type="DynamicFont" id=1]

size = 36
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = true
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings", "font_data" ]

[sub_resource type="DynamicFont" id=2]

size = 24
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = true
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 8
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = true
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings", "font_data" ]

[node name="pause_menu" type="Control"]
pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Margin", "Pause", "Script" ]

[node name="title" type="Label" parent="."]
material = SubResource( 5 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -144.0
margin_top = -1.0
margin_right = 607.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "PAUSED!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Custom Fonts", "Margin", "Material", "custom_fonts/font" ]

[node name="continue" type="Button" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 185.0
margin_top = 74.0
margin_right = 269.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Continue"
flat = true
align = 1
script = ExtResource( 3 )
_sections_unfolded = [ "Custom Constants", "Custom Fonts", "custom_fonts/font", "shortcut" ]

[node name="menu" type="Button" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 193.0
margin_top = 111.0
margin_right = 257.0
margin_bottom = 141.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Menu"
flat = true
align = 1
script = ExtResource( 3 )
_sections_unfolded = [ "Custom Constants", "Custom Fonts", "custom_fonts/font" ]

[node name="exit" type="Button" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 188.0
margin_top = 143.0
margin_right = 262.0
margin_bottom = 173.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit"
flat = true
align = 1
script = ExtResource( 3 )
_sections_unfolded = [ "Custom Fonts", "custom_fonts/font" ]

[node name="info_text" type="Label" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -137.0
margin_top = 213.0
margin_right = 614.0
margin_bottom = 232.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "A Game Made in 48 hours for Ludum Dare 42 By Paulb23 - crazy046"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Custom Fonts", "Margin", "custom_fonts/font" ]

[node name="music_vol_label" type="Label" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 285.0
margin_top = 92.0
margin_right = 413.0
margin_bottom = 111.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "Music Volume"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Custom Fonts", "Margin", "custom_fonts/font" ]

[node name="music_vol" type="HSlider" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 287.0
margin_top = 108.0
margin_right = 415.0
margin_bottom = 124.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = -55.0
max_value = 30.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
editable = true
scrollable = true
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="sfx_label" type="Label" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 300.0
margin_top = 135.0
margin_right = 404.0
margin_bottom = 154.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "Effect Volume"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Custom Fonts", "Margin", "custom_fonts/font" ]

[node name="sfx_vol" type="HSlider" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 287.0
margin_top = 154.0
margin_right = 415.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = -75.0
max_value = 30.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
editable = true
scrollable = true
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="pause_timer" type="Timer" parent="."]
process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

